--- a/css.css
+++ b/css.css
@@ -27,7 +27,12 @@ footer {
 
 .header {
     color:white;
-    
+    display: inline;
+    position: relative;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .divh {
@@ -73,4 +78,12 @@ h1 {
 .error {
     color: red;
     display: inline;
+}
+
+.register {
+    color: white;
+    display: inline;
+    position: relative;
+    float: right;
+    width: 10%;
 }
