--- a/css.css
+++ b/css.css
@@ -31,7 +31,7 @@ footer {
     position: relative;
     margin-top: auto;
     margin-bottom: auto;
-    margin-left: auto;
+    margin-left: 15%;
     margin-right: auto;
 }
 
